--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="Dashboard">Dashboard</string>
     <string name="Lists_of_rent">Lists of rent</string>
     <string name="To_do_list">To do list</string>
+    <string name="Required" />
+    <string name="required">required</string>
 </resources>
